ngebenerin mandatory image, bahasa inggris indo

--- a/Views/AnnouncementsPage.cshtml
+++ b/Views/AnnouncementsPage.cshtml
@@ -14,7 +14,7 @@
 
 
 @if(string.IsNullOrWhiteSpace(Model.PengumumanContentTitle) == false){
-	<div class="pengadaan-wrapper">
+	<div class="pengadaan-wrapper" data-aos="fade-up">
 		<div class="container rich-text-content">
 			
 			<h4>@Model.PengumumanContentTitle</h4>
