--- a/Views/CareerPage.cshtml
+++ b/Views/CareerPage.cshtml
@@ -12,7 +12,7 @@
 	</div>
 </div>
 
-<div class="container container-karir rich-text-content">
+<div class="container container-karir rich-text-content" data-aos="fade-up">
 	<h4>@Model.CareerContent1TitleHijau</h4>
 	<h3>@Model.CareerContent1Title</h3>
 	<img src="@Model.CareerContent1Image.Url()" class="rich-float-right w-50">
