--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -45,6 +45,10 @@
 							class="fa-brands fa-twitter"></i>@Model.ContactTwitterLink.Name</a>
 				}
 			</div>
+			<div class="mediasosial-list d-flex">
+			    <i class="fa-regular fa-envelope"></i>
+                <p class="font-weight-bold">@Model.ContactEmailAddress</p>
+			</div>
 		</div>
 	</div>
 	<div class="kontak-form">
