--- a/Views/MediaInformationPage.cshtml
+++ b/Views/MediaInformationPage.cshtml
@@ -13,10 +13,10 @@
 	</div>
 </div>
 
-<div class="container headline-title">
+<div class="container headline-title" data-aos="fade-up">
 	<h2>@Model.HeadlineTitle</h2>
 </div>
-<div class="container beritapengumuman-headline">
+<div class="container beritapengumuman-headline" data-aos="fade-up">
 	@if (Model.Headline1Image != null)
 	{
 		<div class="berita-section" style="background-image: url('@Model.Headline1Image.Url()');">
