--- a/Views/OurProjectsPage.cshtml
+++ b/Views/OurProjectsPage.cshtml
@@ -24,23 +24,23 @@
 	</div>
 </div>
 
-<div class="container rich-text-content">
+<div class="container rich-text-content" data-aos="fade-up">
 	<h3>@Model.ProjectsLocationContentTitle</h3>
 	<p>@Model.ProjectsLocationContent</p>
 </div>
 
-<div class="container container-projects-image">
+<div class="container container-projects-image" data-aos="fade-up">
 	<img class="project-location" src="@Model.ProjectsLocation.Url()">
 	<img src="@Model.ProjectsFeatures.Url()">
 </div>
 
 
 <div class="container">
-	<div class="rich-text-content">
+	<div class="rich-text-content" data-aos="fade-up">
 		<h3>@Model.ProdukLainnyaContentTitle</h3>
 		<p>@Model.ProdukLainnyaContent</p>
 	</div>
-	<div class="bbm">
+	<div class="bbm" data-aos="fade-up">
 		<h2>@Model.BbmTitle</h2>
 		<div class="bbm-flex">
 			<div class="bbm-produk">
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 
-	<div class="produk-lainnya">
+	<div class="produk-lainnya" data-aos="fade-up">
 		<h2>@Model.ProdukLainnyaTitle</h2>
 		<div class="produk-lainnya-image">
 			<img src="@Model.ProdukLainnyaImage.Url()">
