--- a/Views/Shareholders.cshtml
+++ b/Views/Shareholders.cshtml
@@ -25,6 +25,6 @@
 </div>
 
 
-<div class="container shareholders-container">
+<div class="container shareholders-container" data-aos="fade-up">
 	<img style="width:100%;" src="@Model.ShareholdersImage.Url()" alt="Pemegang Saham/Shareholders">
 </div>
