--- a/Views/SustainableBusinessPage.cshtml
+++ b/Views/SustainableBusinessPage.cshtml
@@ -24,24 +24,24 @@
 	</div>
 </div>
 
-<div class="container sustainable-container rich-text-content">
+<div class="container sustainable-container rich-text-content" data-aos="fade-up">
 	<h4>@Model.SustainableBusinessContentTitleHijau</h4>
 	<p>@Model.SustainableBusinessContent</p>
 </div>
 
-<div class="container sustainable-business-image">
+<div class="container sustainable-business-image" data-aos="fade-up">
 	<h3>@Model.SustainableBusinessImageTitle</h3>
 	<img src="@Model.SustainableBusinessImage.Url()">
 </div>
 
-<div class="container px-2 sustainable-sub-content sustainable-sub-content-1 rich-text-content">
+<div class="container px-2 sustainable-sub-content sustainable-sub-content-1 rich-text-content" data-aos="fade-up">
 	<img src="@Model.SubContent1Image.Url()">
 	<h3>@Model.SubContent1Title</h3>
 
 	<p>@Model.SubContent1</p>
 </div>
 
-<div class="container px-2 sustainable-sub-content sustainable-sub-content-2 rich-text-content">
+<div class="container px-2 sustainable-sub-content sustainable-sub-content-2 rich-text-content" data-aos="fade-up">
 	<img src="@Model.SubContent2Image.Url()">
 	<h3>@Model.SubContent2Title</h3>
 
