--- a/Views/WhoWeArePage.cshtml
+++ b/Views/WhoWeArePage.cshtml
@@ -23,7 +23,7 @@
 	</div>
 </div>
 
-<div class="container whoweare-content rich-text-content">
+<div class="container whoweare-content rich-text-content" data-aos="fade-up">
 	<img src="@Model.WhoweareContentImage1.Url()" class="w-50 rich-float-left">
 	<h4>@Model.WhoweareContentTitleHijau</h4>
 	<h3>@Model.WhoweareContentTitle</h3>
@@ -38,7 +38,7 @@
 </div>
 
 
-<div style="background-image: url('@Model.FaseBackgroundImage.Url()')" class="fase-wrapper">
+<div style="background-image: url('@Model.FaseBackgroundImage.Url()')" class="fase-wrapper" data-aos="fade-up">
 	<div class="container">
 		<h3>@Model.FaseTitle</h3>
 		<img src="@Model.FaseImage.Url()" alt="fase">
