--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -18,14 +18,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>@Model.Value("titlePageUtama") | Pertamina Rosneft Pengolahan Petrokimia</title>
+    <title>@Model.Value("titlePageUtama") | Pertamina Rosneft Pengolahan & Petrokimia</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="page-number" content="@Model.Value("pageNumber")">
 	
 	<link rel="icon" type="image/x-icon" href="@favicon.Url()">
     
-    <link rel="stylesheet" href="@Url.Content("~/css/style35.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/css/style38.css")" />
 	<link rel="stylesheet" href="@Url.Content("~/css/bootstrap.css")" />
 	<link rel="stylesheet" href="@Url.Content("~/css/CustomRichTextEditor.css")" />
 	<script src="https://www.google.com/recaptcha/api.js" defer></script>
