--- a/Views/AboutPetrokimiaPage.cshtml
+++ b/Views/AboutPetrokimiaPage.cshtml
@@ -25,7 +25,7 @@
 	</div>
 </div>
 
-<div class="container rich-text-content">
+<div class="container rich-text-content" data-aos="fade-up">
 	<img src="@Model.TentangPetrokimiaContentImage1.Url()" class="rich-float-left w-50">
 	<h3>@Model.TentangPetrokimiaContentTitle</h3>
 	<p>@Model.TentangPetrokimiaContent</p>
@@ -33,11 +33,11 @@
 </div>
 <div style="background-image:url('@Model.PeranBackgroundImage.Url()')" class="peran-wrapper">
 	<div class="container container-peran">
-		<h4>@Model.PeranTitle</h4>
+		<h4 data-aos="fade-up">@Model.PeranTitle</h4>
 		<div class="peran-grid">
 			@foreach (var item in Model.PeranList)
 			{
-				<div class="peran-list">
+				<div class="peran-list" data-aos="fade-up">
 					<div class="gambar">
 						<img src="@item.PeranImage.Url()">
 					</div>
