--- a/Views/NewsPage.cshtml
+++ b/Views/NewsPage.cshtml
@@ -14,7 +14,7 @@
 
 @if (string.IsNullOrWhiteSpace(Model.BeritaContentTitle) == false)
 {
-	<div class="pengadaan-wrapper">
+	<div class="pengadaan-wrapper" data-aos="fade-up">
 		<div class="container rich-text-content">
 
 			<h4>@Model.BeritaContentTitle</h4>
