--- a/Views/Partials/listBerita.cshtml
+++ b/Views/Partials/listBerita.cshtml
@@ -3,7 +3,7 @@
 @using Umbraco.Web.Models;
 
 
-<div class="container slider-container ">
+<div class="container slider-container " data-aos="fade-up">
     <div class="berita-slider swiper">
         <div class="berita-head">
             <img src="/images/vector-paper.svg">
@@ -58,8 +58,10 @@
             <img src="/images/tombol-kanan.svg" class="swiper-button-next" style="--swiper-navigation-size: 100px">
         </div>
         @if (selection == null || !selection.Any())
-        {
-            <h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
+        {	
+			<div class="item-kosong">
+				<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
+			</div>
         }
     </div>
 </div>
