--- a/Views/Partials/listLaporanVertikal.cshtml
+++ b/Views/Partials/listLaporanVertikal.cshtml
@@ -36,6 +36,8 @@
 
     @if (selection == null || !selection.Any())
     {
-        <h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
+        <div class="item-kosong">
+			<h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
+		</div>
     }
 </div>
