--- a/Views/ProcurementsPage.cshtml
+++ b/Views/ProcurementsPage.cshtml
@@ -15,7 +15,7 @@
 
 @if(string.IsNullOrWhiteSpace(Model.PengadaanContentTitle) == false)
 {
-	<div class="pengadaan-wrapper">
+	<div class="pengadaan-wrapper" data-aos="fade-up">
 		<div class="container rich-text-content">
 			<h4>@Model.PengadaanContentTitle</h4>
 			<p>@Model.PengadaanContentText</p>
