--- a/Views/ReportsPage.cshtml
+++ b/Views/ReportsPage.cshtml
@@ -16,7 +16,7 @@
 
 @if (string.IsNullOrWhiteSpace(Model.LaporanContentTitle) == false)
 {
-	<div class="pengadaan-wrapper">
+	<div class="pengadaan-wrapper" data-aos="fade-up">
 		<div class="container rich-text-content">
 
 			<h4>@Model.LaporanContentTitle</h4>
