sisa karir, our projects n news events

--- a/Views/AboutPetrokimiaPage.cshtml
+++ b/Views/AboutPetrokimiaPage.cshtml
@@ -29,6 +29,17 @@
 	<img src="@Model.TentangPetrokimiaContentImage1.Url()" class="rich-float-left w-50">
 	<h3>@Model.TentangPetrokimiaContentTitle</h3>
 	<p>@Model.TentangPetrokimiaContent</p>
+	<hr class="text-secondary my-5" />
+	<!-- MASIH HARDCODE -->
+	<h3>Produk GRR Tuban </h3>
+	<p>
+	Kilang Grass Root Refinery (GRR) Tuban merupakan kilang BBM dengan teknologi terkini dengan kapasitas pengolahan crude oil mencapai 300 ribu barel per hari.
+	<br/>
+	<br/>
+	Kilang GRR Tuban mampu memproduksi total BBM sejumlah 10,921 kilo ton per tahun serta 5060 kilo ton produk petrokimia dan turunan petrokimia lainnya per tahun
+	</p>
+	<img src="/images/our-product-img.png" class="">
+	<div class="my-3" style="color:white">batas</div>
 	<img src="@Model.TentangPetrokimiaContentImage2.Url()" class="">
 </div>
 <div style="background-image:url('@Model.PeranBackgroundImage.Url()')" class="peran-wrapper">
