--- a/Views/WhoWeArePage.cshtml
+++ b/Views/WhoWeArePage.cshtml
@@ -42,5 +42,12 @@
 	<div class="container">
 		<h3>@Model.FaseTitle</h3>
 		<img src="@Model.FaseImage.Url()" alt="fase">
+		<!-- MASIH HARDCODE -->
+		<p class="text-white">
+			Fase proyek GRR Tuban oleh PRPP telah dimulai sejak tahun 2016 yang ditandai dengan aktivitas Bankable Feasibility Study. Pada tahun 2019, PRPP berkolaborasi dengan Tecnicas Reunidas S.A (Tecnicas Reunidas) selaku kontraktor penyusun GED yang berbasis di Madrid, Spanyol memulai fase General Engineering Design untuk PRPP.
+			<br/>
+			<br/>
+			Pekerjaan GED terdiri dari 2 (dua) tahap, yaitu Basic Engineering Design (BED) dan Front End Engineering Design (FEED). Tahap BED diselesaikan pada 31 Maret 2021 dan langsung dilanjutkan dengan tahap FEED yang berakhir pada 31 Mei 2022		
+			</p>
 	</div>
 </div>
