--- a/Views/GovernanceAndBusinessEthicsPage.cshtml
+++ b/Views/GovernanceAndBusinessEthicsPage.cshtml
@@ -32,7 +32,7 @@
             <p>@Model.GovernanceContentText</p>
         </div>
         <div class="w-50 ms-3" data-aos="fade-up">
-            <img src="/images/etika-bisnis-img.png" alt="ethics code">
+            <img src="/images/etika-bisnis-img.png" style="width:100%" alt="ethics code">
         </div>
     </div>
     
@@ -71,7 +71,7 @@
                 <div>
                     <div class="d-flex justify-content-between align-items-center">
                         <p>1. Kebijakan Anti Korupsi</p>
-                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border border-primary rounded rounded-3 text-primary pointer" style="width:35%">
+                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border-green rounded rounded-3 text-primary pointer" style="width:35%">
                             <div>Download File</div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download text-primary" viewBox="0 0 16 16">
                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <p>2. Kebijakan Informasi </p>
-                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border border-primary rounded rounded-3 text-primary pointer" style="width:35%">
+                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border-green rounded rounded-3 text-primary pointer" style="width:35%">
                             <div>Download File</div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download text-primary" viewBox="0 0 16 16">
                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <p>3. Kebijakan Kerahasiaan</p>
-                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border border-primary rounded rounded-3 text-primary pointer" style="width:35%">
+                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border-green rounded rounded-3 text-primary pointer" style="width:35%">
                             <div>Download File</div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download text-primary" viewBox="0 0 16 16">
                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <p>4. Kebijakan Data Personal</p>
-                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border border-primary rounded rounded-3 text-primary pointer" style="width:35%">
+                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border-green rounded rounded-3 text-primary pointer" style="width:35%">
                             <div>Download File</div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download text-primary" viewBox="0 0 16 16">
                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <p>5. Pendoman Whisttleblowing</p>
-                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border border-primary rounded rounded-3 text-primary pointer" style="width:35%">
+                        <div class="d-flex justify-content-between align-items-center px-3 py-1 border-green rounded rounded-3 text-primary pointer" style="width:35%">
                             <div>Download File</div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download text-primary" viewBox="0 0 16 16">
                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
