--- a/Views/OurProjectsPage.cshtml
+++ b/Views/OurProjectsPage.cshtml
@@ -24,18 +24,226 @@
 	</div>
 </div>
 
-<div class="container rich-text-content" data-aos="fade-up">
+<!-- <div class="container rich-text-content" data-aos="fade-up">
 	<h3>@Model.ProjectsLocationContentTitle</h3>
 	<p>@Model.ProjectsLocationContent</p>
-</div>
+</div> -->
 
 <div class="container container-projects-image" data-aos="fade-up">
 	<img class="project-location" src="@Model.ProjectsLocation.Url()">
-	<img src="@Model.ProjectsFeatures.Url()">
+	<!-- <img src="@Model.ProjectsFeatures.Url()"> -->
 </div>
 
+<div class="bg-gray my-5 p-3 d-flex flex-column justify-content-between align-items-center container-licensor">
+	<h3 class="text-green">Licensors and The Associated Units</h3>
+	<!-- <div class="our-project-slider-upper swiper container my-5" style="height: 30vh"> -->
+	<div class="our-project-slider-upper swiper container py-5">
+		<div class="swiper-wrapper align-items-center">
+				<div class="swiper-slide">
+					<div class="item text-center">
+						<div class="gambar">
+								<img width="40%" src="/images/our-project-slide-1.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="item text-center">
+						<div class="gambar">
+								<img width="40%"  src="/images/our-project-slide-2.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="item text-center">
+						<div class="gambar">
+								<img width="40%" src="/images/our-project-slide-3.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="item text-center">
+						<div class="gambar">
+								<img width="40%"  src="/images/our-project-slide-4.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="item text-center">
+						<div class="gambar">
+								<img width="40%"  src="/images/our-project-slide-5.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="item text-center">
+						<div class="gambar">
+								<img width="40%"  src="/images/our-project-slide-6.png">
+						</div>
+					</div>
+				</div>
+		</div>
+        <div>
+            <img src="/images/tombol-kiri.svg" class="swiper-button-prev" style="--swiper-navigation-size: 100px">
+        </div>
+        <div>
+            <img src="/images/tombol-kanan.svg" class="swiper-button-next" style="--swiper-navigation-size: 100px">
+        </div>
+		<div class="swiper-pagination mt-5"></div>		
+	</div>
+</div>
 
-<div class="container">
+<div class="container container-third-parties mt-5" data-aos="fade-up">
+	<h3 class="text-green text-center">Completed Studies and Third Parties Involvement</div>
+	<div class="our-project-slider-lower swiper container py-5">
+	<!-- <div class="our-project-slider-lower swiper container my-5" style="height: 30vh"> -->
+		<div class="swiper-wrapper align-items-center">
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-7.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-8.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-9.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-10.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-11.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-12.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-13.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-14.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-15.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img src="/images/our-project-slide-16.png">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
+						<div class="gambar">
+								<img  src="/images/our-project-slide-17.png">
+						</div>
+					</div>
+				</div>
+		</div>
+        <div>
+            <img src="/images/tombol-kiri.svg" class="swiper-button-prev" style="--swiper-navigation-size: 100px">
+        </div>
+        <div>
+            <img src="/images/tombol-kanan.svg" class="swiper-button-next" style="--swiper-navigation-size: 100px">
+        </div>
+		<div class="swiper-pagination mt-5"></div>		
+	</div>
+</div>
+
+<div class="container container-engineering-activities my-5" data-aos="fade-up">
+	<h3 class="text-green">Engineering Activities</h3>
+	<p>Amidst pandemic situation, Basic Engineering Design that was started in Q4 2019 has been completed in April 2021, and continued to 
+		Front-end Engineering Design that has been completed in May 2022</p>
+	<div class="d-flex justify-content-between align-items-end">
+		<div style="width:49%;position:relative">
+			<img width="100%" src="/images/our-project-mid-1.png" alt="">
+			<div class="gradient-container w-100 h-100 d-flex flex-column align-items-center justify-content-end p-3 fw-bold" style="position:absolute;bottom:0;left:0;z-index:2;background: url(/images/our-project-gradient.png)center bottom no-repeat; background-size: 100%;">
+				CDU & Saturated Gas Plant
+			</div>
+		</div>
+		<div style="width:49%;position:relative">
+			<img width="100%" src="/images/our-project-mid-2.png" alt="">
+			<div class="gradient-container w-100 h-100 text-center d-flex flex-column align-items-center justify-content-end py-3 fw-bold" style="position:absolute;bottom:0;left:0;z-index:2;background: url(/images/our-project-gradient.png)center bottom no-repeat; background-size: 100%;">
+				Desalination Plant and Waste Water Treatment Plant
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container container-campus-overview my-5" data-aos="fade-up">
+	<h3 class="text-green text-center">Campus Overview</h3>
+	<div class="image-list d-flex justify-content-between align-items-end flex-wrap">
+		<img src="/images/our-project-midlow-1.png" width="49%" style="margin: 1rem 0" alt="">
+		<img src="/images/our-project-midlow-2.png" width="49%" style="margin: 1rem 0" alt="">
+		<img src="/images/our-project-midlow-3.png" width="49%" style="margin: 1rem 0" alt="">
+		<img src="/images/our-project-midlow-4.png" width="49%" style="margin: 1rem 0" alt="">
+	</div>
+	<div class="image-main mt-2">
+		<img width="100%" height="52%" src="/images/our-project-midlow-5.png" alt="">
+	</div>
+</div>
+
+<div class="container-site-activities bg-gray my-5 p-3" data-aos="fade-up">
+	<div class="container">
+		<h3 class="text-green text-center">Site Activities</h3>
+		<div class="d-flex justify-content-between align-items-end flex-wrap">
+			<img src="/images/our-project-lower-1.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-2.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-3.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-4.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-1.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-2.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-3.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-4.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-1.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-2.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-3.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+			<img src="/images/our-project-lower-4.png" width="24%" height="24%" style="margin: 1rem 0" alt="">
+		</div>
+	</div>
+</div>
+
+<div class="container-prpp-funfact" data-aos="fade-up"> 
+	<img src="/images/our-project-lowlow.png" width="100%" alt="">
+</div>
+
+<!-- NANTI PINDAH KE TENTANG-PETROKIMIA -->
+<!-- <div class="container">
 	<div class="rich-text-content" data-aos="fade-up">
 		<h3>@Model.ProdukLainnyaContentTitle</h3>
 		<p>@Model.ProdukLainnyaContent</p>
@@ -81,6 +289,6 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 
