galeri n news&events

--- a/Views/NewsPage.cshtml
+++ b/Views/NewsPage.cshtml
@@ -12,6 +12,19 @@
 	</div>
 </div>
 
+<div class="bisnis-navbar">
+	<div class="container bisnis-navbar-list">
+
+		@Html.Partial("~/Views/Partials/navbarNews.cshtml")
+		<div class="bisnis-navbar-arrowdown" id="bisnis-navbar-arrowdown">
+			<a class="active">News & Events</a>
+			<i class="fa-solid fa-chevron-down panah-bawah"></i>
+			<i class="fa-solid fa-chevron-up panah-atas"></i>
+		</div>
+	</div>
+</div>
+
+
 @if (string.IsNullOrWhiteSpace(Model.BeritaContentTitle) == false)
 {
 	<div class="pengadaan-wrapper" data-aos="fade-up">
