--- a/Views/OurProjectsPage.cshtml
+++ b/Views/OurProjectsPage.cshtml
@@ -36,7 +36,6 @@
 
 <div class="bg-gray my-5 p-3 d-flex flex-column justify-content-between align-items-center container-licensor">
 	<h3 class="text-green">Licensors and The Associated Units</h3>
-	<!-- <div class="our-project-slider-upper swiper container my-5" style="height: 30vh"> -->
 	<div class="our-project-slider-upper swiper container py-5">
 		<div class="swiper-wrapper align-items-center">
 				<div class="swiper-slide">
@@ -95,7 +94,6 @@
 <div class="container container-third-parties mt-5" data-aos="fade-up">
 	<h3 class="text-green text-center">Completed Studies and Third Parties Involvement</div>
 	<div class="our-project-slider-lower swiper container py-5">
-	<!-- <div class="our-project-slider-lower swiper container my-5" style="height: 30vh"> -->
 		<div class="swiper-wrapper align-items-center">
 				<div class="swiper-slide">
 					<div class="bg-gray rounded py-3 px-1 text-center d-flex flex-column align-items-center justify-content-center" style="height: 30vh;width:20vw">
@@ -181,7 +179,7 @@
         <div>
             <img src="/images/tombol-kanan.svg" class="swiper-button-next" style="--swiper-navigation-size: 100px">
         </div>
-		<div class="swiper-pagination mt-5"></div>		
+		<div class="swiper-pagination"></div>		
 	</div>
 </div>
 
