--- a/Views/GalleryPage.cshtml
+++ b/Views/GalleryPage.cshtml
@@ -25,35 +25,62 @@
 	</div>
 </div>
 
-<main class="bg-white w-full">
-	<div class="container mt-5">
-		<div id="main-image-swiper">
-		</div>
-	</div>
-	<div class="swiper-galeri my-5 bg-gray swiper">
-		<div class="swiper-wrapper swiper-wrapper-galeri align-items-center py-5">
-		</div>
-		<div>
-			<img src="/images/tombol-kiri.svg" class="swiper-button-prev" style="--swiper-navigation-size: 100px">
-		</div>
-		<div>
-			<img src="/images/tombol-kanan.svg" class="swiper-button-next" style="--swiper-navigation-size: 100px">
-		</div>
-		@* <div class="swiper-pagination mt-5"></div>		 *@
-	</div>
-
-	<div class="container bg-white py-5 border-top d-flex justify-content-between align-items-end flex-wrap container-albummmm">
+<main class="main-galeri bg-white w-full bg-white py-5 border-top">
+	<h3 class="text-center">Dokumentasi Perjalanan PRPP</h3>
+	<div class="container " style="display: grid; grid-template-columns: repeat(3, minmax(0, 1fr)); gap: 1.25vw;">
 		@{
-			var indexGalleryAlbum = 0;
+			var indexAlbumThumbnail = 0;
 		}
 		@foreach (var item in Model.GalleryAlbum)
 		{	
-            indexGalleryAlbum = indexGalleryAlbum + 1;
-
 			var albumThumbnailUrl = item.AlbumThumbnail.Url();
-			<div class="image-container my-3 pointer" style="width:30%;height:35vh;position:relative;background: url(@albumThumbnailUrl) center bottom no-repeat; background-size: cover;" onclick="callNewAlbum(@indexGalleryAlbum)">
-				<div class="album-caption w-100 p-3 text-white" style="position:absolute; bottom: 0;">@item.AlbumTitle</div>
+			<div class="album-thumbnail image-container my-3 pointer" style="width:100%; height:35vh; position:relative;background: url(@albumThumbnailUrl) center bottom no-repeat; background-size: cover;" data-album-ke="@indexAlbumThumbnail">
+				<div class="album-caption w-100 text-white" style="position:absolute; bottom: 5%; left: 0; padding: .5vw 1vw; background-color: #333333aa;">@item.AlbumTitle</div>
 			</div>
+			indexAlbumThumbnail++;
 		}
 	</div>
+
+	<div id="main-galeri-item">
+		<div class="container mt-5">
+			<h4 id="judul-album" class="text-center"></h4>
+			<div id="main-image-swiper">
+			</div>
+		</div>
+		<div id="swiper-galeri" class="swiper-galeri my-5 bg-gray swiper">
+			<div>
+				<img src="/images/tombol-kiri.svg" class="swiper-button-prev" style="--swiper-navigation-size: 100px">
+			</div>
+			<div>
+				<img src="/images/tombol-kanan.svg" class="swiper-button-next" style="--swiper-navigation-size: 100px">
+			</div>
+			@* <div class="swiper-pagination mt-5"></div>		 *@
+		</div>
+	</div>
+	
 </main>
+
+<div id="data-galeri" style="display: none;">
+	@{var indexAlbum = 0;}
+	@foreach (var album in Model.GalleryAlbum)
+	{
+		<div id="swiper-wrapper-galeri-@indexAlbum" class="swiper-wrapper swiper-wrapper-galeri align-items-center py-5">
+			@{
+				var indexAlbumItem = 0;
+			}
+			@foreach (var albumItem in album.AlbumItems)
+			{
+				<div class="swiper-slide slide-galeri-item" data-ke="@indexAlbumItem" onclick="handleSlideGaleriItem(this)">
+					<div class="text-center d-flex flex-column align-items-center justify-content-center">
+						<div class="gambar w-100">
+								<img src="@albumItem.ItemImage.Url()" width="100%" style="cursor:pointer; aspect-ratio: 1/1; object-fit: cover;" />
+								<span class="caption-item" style="display: none;">@albumItem.ItemCaption</span>
+						</div>
+					</div>
+				</div>
+				indexAlbumItem++;
+			}
+		</div>
+		indexAlbum++;
+	}
+</div>
