--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -49,6 +49,10 @@
 	<!-- === AOS CSS === -->
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+
+	<!-- === DATA TABLE CSS === -->
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+
 	<!-- === AOS JS === -->
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -56,7 +60,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
 		integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous">
 		</script>
-		
+
+
+	
 </head>
 
 <body class="frontpage">
@@ -96,6 +102,8 @@
 	<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
 	<script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
 
+	<!-- === DATA TABLE JS === -->
+	<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 
 </body>
 
