--- a/css/style41.css
+++ b/css/style41.css
@@ -121,6 +121,15 @@ body{
 
 
 
+/*=================*/
+/*=== DATATABLE ===*/
+/*=================*/
+
+#tableKarir td{
+	padding: 0;
+}
+
+
 /*===========-=*/
 /*===UMBRACO===*/
 /*=============*/
@@ -256,6 +265,8 @@ body{
   color: #ffffff;
   opacity: 1 !important;
   background-color: transparent !important;
+
+  text-shadow: .5px .5px 0px var(--abu600);
 
   margin-right: 8px !important;
   padding-right: 8px !important;
@@ -851,6 +862,7 @@ nav.scrolled .navbar-hamburger{
 	/* line-height: 3vw; */
 	letter-spacing: 0.02em;
 	/*margin-top: 200px;*/
+	text-shadow: 1px 1px 1px var(--abu600);
 }
 
 .home-main-slider-content h2{
@@ -862,6 +874,7 @@ nav.scrolled .navbar-hamburger{
 	color: #ffffff;
 	margin-top: 24px;
 	margin-bottom: 36px;
+	text-shadow: .5px .5px 0px var(--abu600);
 }
 
 .home-main-slider-content a{
@@ -1646,6 +1659,8 @@ a.coklat-prpp:hover{
 	letter-spacing: 0.02em;
 
 	color: #ffffff;
+
+	text-shadow: 1px 1px 1px var(--abu600);
 }
 
 .tentang-jumbotron .content h2{
@@ -5323,18 +5338,20 @@ a.coklat-prpp:hover{
 
 #swiper-galeri .swiper-slide{
 	transition: .25s;
+	border: 4px solid transparent;
 }
 
 #swiper-galeri .swiper-slide:hover{
-	transform: scale(1.1);
+	transform: scale(1.05);
 }
 
 #swiper-galeri .swiper-slide-active{
-	transform: scale(1.2);
+	transform: scale(1.1);
+	border-color: var(--fonte);
 }
 
 #swiper-galeri .swiper-slide-active:hover{
-	transform: scale(1.2);
+	transform: scale(1.1);
 }
 
 /*==============*/
@@ -5966,7 +5983,8 @@ footer .social-media{
 	}
 
 	.tentang-navbar .tentang-navbar-list a,
-	.bisnis-navbar, .news-navbar .bisnis-navbar-list a{
+	.bisnis-navbar .bisnis-navbar-list a,
+	.news-navbar .news-navbar-list a{
 		font-size: 14px;
 	}
 
